# raw-dub-prototype

./: .gitignore  BASS_DUB_PRESSURE_ANALYSIS.txt  CMakeLists.txt  CURVE_AND_OVERRIDE_SYSTEM.txt  DELAY_FEEDBACK_LOOP_ANALYSIS.txt  IMPLEMENTATION_NOTES.txt  MELODIC_EDITOR_DESIGN.txt  README.md  RECENT_CHANGES.txt
Source/: AudioEngine.cpp  AudioEngine.h  BWLookAndFeel.h  BassSynth.cpp  BassSynth.h  ClickableLabel.h  CurveLaneEditor.h  DubDelay.cpp  DubDelay.h  HiHatSynth.cpp  HiHatSynth.h  KickSynth.cpp  KickSynth.h  Main.cpp  MainComponent.cpp  MainComponent.h  ParamID.h  PointCurve.h  ProjectIO.cpp  ProjectIO.h  Scale.h  SkankPatternSlot.h  SkankSynth.cpp  SkankSynth.h  SnareSynth.cpp  SnareSynth.h  StepButton.cpp  StepButton.h  StepLevel.h  StepPattern.h  ValueBoxSlider.h
